src/objects/BMCServiceDesk__Incident__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpIncident</customHelpPage>
    <description>This object allows you to store data for incidents.</description>
    <fields>
        <fullName>BMCServiceDesk__ACApprovalStatus__c</fullName>
        <label>BCM Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ACSeverity__c</fullName>
        <label>BCM Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Actual_Outage_Time_Hours__c</fullName>
        <formula>BMCServiceDesk__actualOutageDuration__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Outage Time (Hours)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Additional_email_information__c</fullName>
        <inlineHelpText>Use this field to add additional information to the email even after selecting the email template.</inlineHelpText>
        <label>Additional email information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AllTaskCloseController__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to activate the workflow for sending email to Incident owner. The value is toggled to True if the last value was False to activate field update.</description>
        <label>All Tasks Closed Controller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Approval_Status__c</fullName>
        <description>Displayed in the Tickets and Requests list view only if added to the Self Service: View Tickets and Requests field set.</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BLANK__c</fullName>
        <description>Use this field to add space between fields in a Console fieldset.</description>
        <label>&lt;BLANK&gt;</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Category_ID__c</fullName>
        <formula>BMCServiceDesk__FKCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the incident&apos;s category. Categories allow you to classify the incident using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
        <label>Category~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_Account__c</fullName>
        <formula>BMCServiceDesk__FKAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the account of the client who submitted the incident.</inlineHelpText>
        <label>Account~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_Name__c</fullName>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_Phone__c</fullName>
        <label>Client Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Clock_Status__c</fullName>
        <formula>IF( BMCServiceDesk__FKStatus__r.BMCServiceDesk__workStatus__c== true &amp;&amp; BMCServiceDesk__FKStatus__r.BMCServiceDesk__state__c ==  true, $Label.bmcservicedesk__clockstatusrunning, IF( BMCServiceDesk__FKStatus__r.BMCServiceDesk__workStatus__c == false &amp;&amp; BMCServiceDesk__FKStatus__r.BMCServiceDesk__state__c==true,$Label.bmcservicedesk__clockstatuspaused,$Label.bmcservicedesk__clockstatusstopped))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the status of the clock that is used to calculate the actual work time for an incident.</inlineHelpText>
        <label>Work Clock Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Closed_By__c</fullName>
        <formula>BMCServiceDesk__FKClosedBy__r.Username</formula>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
        <label>Closed By~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClosureCategory__c</fullName>
        <label>Closure Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Unable to reproduce</fullName>
                </value>
                <value>
                    <fullName>Unable to solve or in conflict with standards or policy</fullName>
                </value>
                <value>
                    <fullName>Withdrawn by requester</fullName>
                </value>
                <value>
                    <fullName>Workaround</fullName>
                </value>
                <value>
                    <fullName>Duplicate Ticket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Compliant__c</fullName>
        <description>To check if the Incident is closed before due date or not.</description>
        <formula>IF(ISNULL(BMCServiceDesk__dueDateTime__c), &quot;YES&quot;, 
	( IF( ISNULL(BMCServiceDesk__closeDateTime__c), ( IF(BMCServiceDesk__dueDateTime__c &gt;= NOW(), &quot;YES&quot;, &quot;NO&quot;)), 
		( IF(BMCServiceDesk__dueDateTime__c &gt;= BMCServiceDesk__closeDateTime__c, &quot;YES&quot;, &quot;NO&quot;))
	))
)</formula>
        <label>Compliant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Compliments_and_Complaints__c</fullName>
        <label>Compliments and Complaints</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Deep_View__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__DeepView?id=&quot;+Id, IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/deep-view.png&quot;, &quot;&quot;, 18, 18), &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SmartView</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Due_Date_Progress__c</fullName>
        <formula>IF(AND(BMCServiceDesk__state__c, BMCServiceDesk__dueDateTime__c &lt; NOW()), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/light_red.gif&quot;, &quot;Due date of a record has passed&quot;), IF(AND(BMCServiceDesk__state__c,  BMCServiceDesk__Time_Remaining_Percentage__c &gt; 50), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/light_green.gif&quot;, &quot;More than 50% of time is remaining in the due date&quot;), IF(AND(BMCServiceDesk__state__c,  BMCServiceDesk__Time_Remaining_Percentage__c &lt;= 50), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/light_yellow.gif&quot;, &quot;Less than or equal to 50% of time is remaining in the due date&quot;), IF(AND(!BMCServiceDesk__state__c,  BMCServiceDesk__closeDateTime__c &lt;= BMCServiceDesk__dueDateTime__c), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/permissions_confirm16.gif&quot;, &quot;Due date met&quot;), IF(AND(!BMCServiceDesk__state__c,  BMCServiceDesk__closeDateTime__c &gt; BMCServiceDesk__dueDateTime__c), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/permissions_deny16.gif&quot;, &quot;Due date is not met&quot;), &apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows status of incident in a graphical format.</inlineHelpText>
        <label>Due Date Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EmailServiceAddress__c</fullName>
        <description>This field stores the email service address, which is used to create an incident record.</description>
        <label>Email Service Address</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Event_ID__c</fullName>
        <externalId>true</externalId>
        <label>Event ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBMC_BaseElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration Item /  Asset</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__MarkAsDeleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Incident</relationshipLabel>
        <relationshipName>Incident</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBroadcast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broadcast</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Broadcasts__c.BMCServiceDesk__state__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Broadcasts__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an open and active broadcast.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Broadcasts__c</referenceTo>
        <relationshipLabel>Linked Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBusinessService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this field to link the incident to the service that is affected by the incident.</inlineHelpText>
        <label>Service</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__ClassID__c</field>
                <operation>equals</operation>
                <value>BMC_BUSINESSSERVICE</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__MarkAsDeleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select the Business Service.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Incidents (Business Service)</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the incident&apos;s category. Categories allow you to classify the incident using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Category__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Category__c.BMCServiceDesk__AvailableForIncidents__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Select an active category for the incident/ service request.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Category__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the client for this record.</inlineHelpText>
        <label>Client ID</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.BMCServiceDesk__FKAccount__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>User.BMCServiceDesk__Account__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.BMCServiceDesk__FKAccount__c</field>
                <operation>equals</operation>
                <valueField>User.Contact.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Incidents3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKClosedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incidents2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKImpact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the incident&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the incident.</inlineHelpText>
        <label>Impact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Impact__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active impact.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Impact__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKIncident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Linked Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKOpenBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.BMCServiceDesk__IsStaffUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Incidents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKPriority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected. If required, you can use this field to select a different priority value from the calculated value.</inlineHelpText>
        <label>Priority</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Priority__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>select an active priority</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Priority__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKRequestDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the request definition that you want to use to create a service request.</inlineHelpText>
        <label>Request Definition</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(8 OR 1) AND (2 AND 3) AND ((4 OR 5) AND (6 OR 7))</booleanFilter>
            <filterItems>
                <field>$Source.BMCServiceDesk__FKCategory__c</field>
                <operation>equals</operation>
                <valueField>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__FKCategory__c</valueField>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__Online__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__StartDate__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__StartDate__c</field>
                <operation>lessOrEqual</operation>
                <valueField>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__CurrentDate__c</valueField>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__EndDate__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__EndDate__c</field>
                <operation>greaterOrEqual</operation>
                <valueField>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__CurrentDate__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.BMCServiceDesk__FKCategory__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <infoMessage>Select an active request definition.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__SRM_RequestDefinition__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKRequestDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Detail</label>
        <referenceTo>BMCServiceDesk__SRM_RequestDetail__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKServiceOffering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link a service offering of the associated service.</inlineHelpText>
        <label>Service Offering</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__ClassID__c</field>
                <operation>equals</operation>
                <value>BMC_BUSINESSSERVICE</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__MarkAsDeleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Incidents (Service Offering)</relationshipLabel>
        <relationshipName>ServiceOfferringIncidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the appropriate status for the incident. Status is used to display the progress of an incident through its stages of opening to closure.</inlineHelpText>
        <label>Status</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select an active status that applies to incidents.</errorMessage>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__appliesToIncident__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Status__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the template that you want to apply to the record. Templates enable you to pre-populate commonly used fields on a form.</inlineHelpText>
        <label>Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__templateFor__c</field>
                <operation>equals</operation>
                <value>Incident</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__systemTemplate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active template for the incident.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select how quickly the incident needs to be resolved. The urgency and the level of impact are used to calculate the priority of the incident.</inlineHelpText>
        <label>Urgency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Urgency__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active urgency.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Feedback_Last_Submitted__c</fullName>
        <label>Feedback Last Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Feedback__c</fullName>
        <label>Feedback</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Impact_Id__c</fullName>
        <formula>BMCServiceDesk__FKImpact__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the incident&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the incident.</inlineHelpText>
        <label>Impact~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IncidentType__c</fullName>
        <label>Incident Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Compliment</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Information Request</fullName>
                </value>
                <value>
                    <fullName>Out of Scope</fullName>
                </value>
                <value>
                    <fullName>Request for Change</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Incorrect_category__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark incidents with incorrect category</description>
        <label>Incorrect category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Incorrect_owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark incidents with incorrect owner</description>
        <label>Incorrect owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_New_Record__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used to check whether incident is new or not.</description>
        <label>Is New Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Launch_console__c</fullName>
        <formula>IF(!BMCServiceDesk__isServiceRequest__c,
HYPERLINK(&quot;/apex/BMCServiceDesk__ConsoleRedirect?formulaFieldName=IncidentLaunchConsole&amp;recordName=&quot;+Name+&quot;&amp;recordId=&quot;+Id+&quot;&amp;incType=Incident&amp;isdtp=vw&amp;uiTheme=&quot;+$User.UIThemeDisplayed, $Label.bmcservicedesk__incidentrecordprefix+Name, &quot;_self&quot;),
HYPERLINK(&quot;/apex/BMCServiceDesk__ConsoleRedirect?formulaFieldName=IncidentLaunchConsole&amp;recordName=&quot;+Name+&quot;&amp;recordId=&quot;+Id+&quot;&amp;incType=ServiceRequest&amp;isdtp=vw&amp;uiTheme=&quot;+$User.UIThemeDisplayed, $Label.bmcservicedesk__servicerequestprefix+Name, &quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Launch Console</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LockedRecordTimestamp__c</fullName>
        <description>this field is used in case of record locking.</description>
        <label>LockedRecordTimestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__New_Incident__c</fullName>
        <formula>IF (BMCServiceDesk__Is_New_Record__c, IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/newIncident_icon_16.png&quot;,  $Label.bmcservicedesk__new_incident, 16, 16), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the incident is a new incident.</inlineHelpText>
        <label>New Incident</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PreferredContactMethod__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Work Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Priority_ID__c</fullName>
        <formula>BMCServiceDesk__FKPriority__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected. If required, you can use this field to select a different priority value from the calculated value.</inlineHelpText>
        <label>Priority~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Queue__c</fullName>
        <description>Queue to which the record is assigned.</description>
        <formula>IF(UPPER(LEFT(OwnerId , 3)) =&quot;00G&quot;,BMCServiceDesk__queueName__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RF_TimeToClose__c</fullName>
        <description>This field stores the total time a record was in open state based on business hours of client, account, or organization.</description>
        <inlineHelpText>This field stores the total time a record was in open state based on business hours of client, account, or organization.</inlineHelpText>
        <label>Time to Close (Business Days)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>